# AgenticSciML4MFEM

./: .gitignore  LICENSE  MANIFEST.in  README.md  ablation_study.py  demo.py  manager.py  morphing.py  parser.py  pyproject.toml  pytest.ini  requirements.txt  run_agentic.py  todo.md  train_transolver.py  validator.py  vtu_export.py  writer.py
agents/: __init__.py
agents/debate/: __init__.py  controller.py
agents/llm/: __init__.py  anthropic_provider.py  claude_code_provider.py  (+2 more)
configs/: evolution_config.yaml  quarter_plate_with_hole_morphing.md
crack_data/: crack_000.mesh  crack_001.mesh  crack_002.mesh  crack_003.mesh  crack_004.mesh  crack_005.mesh  crack_006.mesh  crack_007.mesh  crack_008.mesh  crack_009.mesh  metadata.json
evaluation/: __init__.py  metrics.py  pipeline.py  preflight.py
evolution/: __init__.py  selection.py  tree.py
examples/: ex22.py  ex22p.py
inpforge/: __init__.py  cli.py  manager.py  morphing.py  schema.py  validator.py  vtu_export.py  writer.py
inputs/: BaseInp2D.inp  BaseInp3D.inp
knowledge/: __init__.py  fea_knowledge.json
knowledge_base/: adaptive_collocation.md  displacement_decomposition.md  j_integral_methods.md  kb_index.json  phase_field_fracture.md  williams_expansion.md  xfem_enrichment.md
meshforge/: __init__.py  cli.py  manager.py  morphing.py  schema.py  validator.py  vtu_export.py  writer.py
orchestration/: __init__.py  orchestrator.py  phases.py
piano/: __init__.py  cli.py
samples/: generate_cluster_samples.py  generate_fine_samples.py  generate_samples.py  generate_two_hole_fine_samples.py  generate_two_hole_samples.py  sample_000.mesh  sample_001.mesh  sample_002.mesh  sample_003.mesh  sample_004.mesh  sample_005.mesh  sample_006.mesh  sample_007.mesh  sample_008.mesh  sample_009.mesh  sample_010.mesh  sample_011.mesh  sample_012.mesh  sample_013.mesh  sample_014.mesh  sample_015.mesh  sample_016.mesh  sample_017.mesh  sample_018.mesh  sample_019.mesh  sample_020.mesh  sample_021.mesh  sample_022.mesh  sample_023.mesh  sample_024.mesh  sample_025.mesh  sample_026.mesh  sample_027.mesh  sample_028.mesh  sample_029.mesh  visualize_samples.py
scripts/: generate_crack_meshes.py  generate_phase_field_data.py  train_surrogate.py  visualize_phase_field_data.py
tests/: conftest.py  test_acquisition.py  test_agentic_sciml.py  test_agents.py  test_benchmarks.py  test_comprehensive.py  test_error_analysis.py  test_h_refinement.py  test_integration.py  test_manager.py  test_morphing.py  test_new_agents.py  test_orchestration.py  test_parser.py  test_phase_field.py  test_r_adaptivity.py  test_surrogate.py  test_transolver.py
train/: sample_000.mesh  sample_002.mesh  sample_003.mesh  sample_006.mesh  sample_012.mesh  sample_014.mesh  sample_015.mesh  sample_016.mesh  sample_018.mesh  sample_019.mesh  sample_023.mesh  sample_024.mesh  sample_025.mesh  sample_026.mesh  sample_028.mesh  sample_030.mesh  sample_031.mesh  sample_032.mesh  sample_033.mesh  sample_034.mesh  sample_035.mesh  sample_036.mesh  sample_037.mesh  sample_038.mesh  sample_039.mesh  sample_040.mesh  sample_041.mesh  sample_042.mesh  sample_043.mesh  sample_044.mesh  sample_045.mesh  sample_046.mesh  sample_047.mesh  sample_048.mesh  sample_049.mesh  sample_050.mesh  sample_051.mesh  sample_052.mesh  sample_053.mesh  sample_054.mesh  (+146 more)
train01/: sample_000.mesh  sample_001.mesh  sample_002.mesh  sample_003.mesh  sample_004.mesh  sample_005.mesh  sample_006.mesh  sample_007.mesh  sample_008.mesh  sample_009.mesh  sample_010.mesh  sample_011.mesh  sample_012.mesh  sample_013.mesh  sample_014.mesh  sample_015.mesh  sample_016.mesh  sample_017.mesh  sample_018.mesh  sample_019.mesh  sample_020.mesh  sample_021.mesh  sample_022.mesh  sample_023.mesh  sample_024.mesh  sample_025.mesh  sample_026.mesh  sample_027.mesh  sample_028.mesh  sample_029.mesh  sample_030.mesh  sample_031.mesh  sample_032.mesh  sample_033.mesh  sample_034.mesh  sample_035.mesh  sample_036.mesh  sample_037.mesh  sample_038.mesh  sample_039.mesh  (+260 more)
train02/: sample_000.mesh  sample_001.mesh  sample_002.mesh  sample_003.mesh  sample_004.mesh  sample_005.mesh  sample_006.mesh  sample_007.mesh  sample_008.mesh  sample_009.mesh  sample_010.mesh  sample_011.mesh  sample_012.mesh  sample_013.mesh  sample_014.mesh  sample_015.mesh  sample_016.mesh  sample_017.mesh  sample_018.mesh  sample_019.mesh  sample_020.mesh  sample_021.mesh  sample_022.mesh  sample_023.mesh  sample_024.mesh  sample_025.mesh  sample_026.mesh  sample_027.mesh  sample_028.mesh  sample_029.mesh  sample_030.mesh  sample_031.mesh  sample_032.mesh  sample_033.mesh  sample_034.mesh  sample_035.mesh  sample_036.mesh  sample_037.mesh  sample_038.mesh  sample_039.mesh  (+260 more)
train03/: sample_000.mesh  sample_001.mesh  sample_002.mesh  sample_003.mesh  sample_004.mesh  sample_005.mesh  sample_006.mesh  sample_007.mesh  sample_008.mesh  sample_009.mesh  sample_010.mesh  sample_011.mesh  sample_012.mesh  sample_013.mesh  sample_014.mesh  sample_015.mesh  sample_016.mesh  sample_017.mesh  sample_018.mesh  sample_019.mesh  sample_020.mesh  sample_021.mesh  sample_022.mesh  sample_023.mesh  sample_024.mesh  sample_025.mesh  sample_026.mesh  sample_027.mesh  sample_028.mesh  sample_029.mesh  sample_030.mesh  sample_031.mesh  sample_032.mesh  sample_033.mesh  sample_034.mesh  sample_035.mesh  sample_036.mesh  sample_037.mesh  sample_038.mesh  sample_039.mesh  (+260 more)
train_fine/: sample_000.mesh  sample_001.mesh  sample_002.mesh  sample_003.mesh  sample_004.mesh  sample_005.mesh  sample_006.mesh  sample_007.mesh  sample_008.mesh  sample_009.mesh  sample_010.mesh  sample_011.mesh  sample_012.mesh  sample_013.mesh  sample_014.mesh  sample_015.mesh  sample_016.mesh  sample_017.mesh  sample_018.mesh  sample_019.mesh  sample_020.mesh  sample_021.mesh  sample_022.mesh  sample_023.mesh  sample_024.mesh  sample_025.mesh  sample_026.mesh  sample_027.mesh  sample_028.mesh  sample_029.mesh  sample_030.mesh  sample_031.mesh  sample_032.mesh  sample_033.mesh  sample_034.mesh  sample_035.mesh  sample_036.mesh  sample_037.mesh  sample_038.mesh  sample_039.mesh  (+160 more)
(+165 files in other folders)
