[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "meshforge"
version = "0.1.0"
description = "Automated MFEM mesh generation for AI/ML training datasets using multi-agent systems"
readme = "README.md"
license = {text = "BSD-3-Clause"}
requires-python = ">=3.9"
authors = [
    {name = "H.-Y. Nam"},
    {name = "Q. Jiang"}
]
keywords = [
    "mfem",
    "mesh",
    "fea",
    "finite-element-analysis",
    "mesh-morphing",
    "tmop",
    "mesh-optimization",
    "dataset-generation",
    "machine-learning",
    "active-learning",
    "multi-agent",
    "llm",
    "deeponet",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Physics",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "numpy>=1.24.0",
    "scipy>=1.10.0",
    "PyYAML>=6.0",
    "openai>=1.0.0",
    "anthropic>=0.18.0",
    "aiohttp>=3.9.0",
    "mfem>=4.6",  # Required for TMOP mesh morphing
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]
viz = [
    "pyvista>=0.40.0",
]
mfem = [
    "mfem>=4.6",
]
surrogate = [
    "deepxde>=1.11.0",
    "tensorflow>=2.10.0",  # or torch>=2.0.0 as alternative backend
]
all = [
    "mfem>=4.6",
    "deepxde>=1.11.0",
    "tensorflow>=2.10.0",
    "pyvista>=0.40.0",
]

[project.scripts]
meshforge = "meshforge.cli:main"

[project.urls]
Homepage = "https://github.com/qjiang/meshforge"
Repository = "https://github.com/qjiang/meshforge"
Documentation = "https://github.com/qjiang/meshforge#readme"
Issues = "https://github.com/qjiang/meshforge/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["meshforge*"]

[tool.setuptools.package-data]
meshforge = ["configs/*.yaml", "configs/*.md", "knowledge/*.json", "morphing/*.py"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
