[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "piano"
version = "0.2.0"
description = "Physics-Informed Agentic Neural Operator — self-improving FEM surrogate via active learning and PINO loss"
readme = "README.md"
license = {text = "BSD-3-Clause"}
requires-python = ">=3.9"
authors = [
    {name = "H.-Y. Nam"},
    {name = "Q. Jiang"}
]
keywords = [
    "pino",
    "physics-informed",
    "neural-operator",
    "transolver",
    "active-learning",
    "surrogate-model",
    "finite-element-analysis",
    "mfem",
    "computational-mechanics",
    "scientific-machine-learning",
    "sciml",
    "multi-agent",
    "llm",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Physics",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "numpy>=1.24.0",
    "scipy>=1.10.0",
    "PyYAML>=6.0",
    "openai>=1.0.0",
    "anthropic>=0.18.0",
    "aiohttp>=3.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]
viz = [
    "pyvista>=0.40.0",
    "matplotlib>=3.7.0",
]
mfem = [
    "mfem>=4.6",
]
surrogate = [
    "torch>=2.0.0",
    "einops>=0.7.0",
]
all = [
    "mfem>=4.6",
    "torch>=2.0.0",
    "einops>=0.7.0",
    "pyvista>=0.40.0",
    "matplotlib>=3.7.0",
]

[project.scripts]
piano = "piano.cli:main"

[project.urls]
Homepage = "https://github.com/AgenticSciML/PIANO"
Repository = "https://github.com/AgenticSciML/PIANO"
Documentation = "https://github.com/AgenticSciML/PIANO#readme"
Issues = "https://github.com/AgenticSciML/PIANO/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["piano*"]

[tool.setuptools.package-data]
piano = ["configs/*.yaml", "configs/*.md", "knowledge/*.json"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
